# ha-govee-led-ble

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  renovate.json  test-auto-merge.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  frontend.yml  release.yml  validate.yml
custom_components/govee_ble_lights/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  h6199_effects.py  icons.json  light.py  manifest.json  number.py  protocol.py  scenes.py  select.py  services.yaml  strings.json  (+1 more)
docs/: ble-autonomous-verification-plan.md  ble-capture-workflow.md  ble-effect-catalogue.md  ble-protocol-h617a.md  ble-protocol-h6199.md  ble-protocol-open-questions.md  device-memory-and-sharing.md
frontend/: package.json  tsconfig.json
scripts/: check-frontend.sh  check.sh  extract_btsnoop_govee.py  extract_diagnostics_aa05.py  h6199_harness.py  harness-selftest.sh  preflight.sh
tests/: conftest.py  mock_ble.py  test_capture_tool.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_modes.py  test_custom_effects.py  test_custom_effects_coordinator.py  test_diagnostics.py  test_fetch_effect_library.py  test_image.py  test_init.py  test_light.py  test_migration.py  test_mock_ble_shim.py  test_mock_device.py  test_number.py  test_preview.py  test_protocol.py  test_protocol_traceability.py  test_safe_verify.py  test_scenes.py  test_select.py  test_sensor.py  test_switch.py  test_time.py  test_timers.py  test_translations.py
(+78 files in other folders)
