[project]
name = "govee-ble-lights"
version = "1.3.1"
description = "Home Assistant custom integration for Govee BLE LED lights"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pyserial>=3.5",
    "ruff>=0.4.0",
    "aiousbwatcher>=1.1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"custom_components/govee_ble_lights/scenes.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
